--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,10 @@
           <div class="container">
             <hr>
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4" style="14px">
                 <a href="mailto:albinash.art@gmail.com">albinash.art@gmail.com</a>
+                        \|
+                <a href="https://www.instagram.com/albinash.art/">instagram</a>
               </div>
             </div>
           </div>
