--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
           <div class="container">
             <hr>
             <div class="row">
-              <div class="col-md-4" style="14px">
+              <div class="col-md-4" style="font-size:14px">
                 <a href="mailto:albinash.art@gmail.com">albinash.art@gmail.com</a>
                         \|
                 <a href="https://www.instagram.com/albinash.art/">instagram</a>
