--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,6 +19,7 @@
           <!-- <li><a href="{{ site.url }}/program">Program</a></li> -->
           <li><a href="{{ site.url }}/events/index.html">Events</a></li>
           <li><a href="{{ site.url }}/cv/index.html">CV</a></li>
+          <li><a href="{{ site.url }}/portfolio/index.html">Portfolio</a></li>
           <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
